Alterações do Tif